working on registration form

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,26 @@
-<ion-nav [root]="rootPage"></ion-nav>
+
+<ion-menu type="overlay" id="app-menu" [content]="content" class="app-menu">
+    <ion-header style="background-color:#488aff;color:white">
+      <ion-list style="background-color:#488aff;color:white">
+        <ion-item style="background-color:#488aff;color:white">
+          <ion-avatar item-left>
+            <img src="https://www.joshmorony.com/wp-content/uploads/2016/07/cloudo-screenshots.png">
+          </ion-avatar>         
+        </ion-item>
+      </ion-list>
+    </ion-header>
+    <ion-content class="app-menu">
+      <ion-list>
+        <button  *ngFor="let p of pageSettings" ion-item (click)="openPage(p)">
+          <ion-icon name="{{p.icon}}"></ion-icon>&nbsp; &nbsp;
+          {{p.title}}
+        </button>
+      </ion-list>
+    </ion-content>
+  <ion-footer>
+    <p ion-text text-center color="primary">Powered By >></p>
+  </ion-footer>
+  
+  </ion-menu>
+  
+  <ion-nav id="nav" main  #content [root]="rootPage"></ion-nav>
