Added user logged in User details in the sidemenu

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,12 +1,13 @@
 
 <ion-menu type="overlay" id="app-menu" [content]="content" class="app-menu">
     <ion-header style="background-color:#488aff;color:white">
-      <ion-list style="background-color:#488aff;color:white">
+      <ion-list no-lines style="background-color:#488aff;color:white">
         <ion-item style="background-color:#488aff;color:white">
           <ion-avatar item-left>
             <img src="https://www.joshmorony.com/wp-content/uploads/2016/07/cloudo-screenshots.png">
-          </ion-avatar>         
+          </ion-avatar> 
         </ion-item>
+        <p style="margin-left:10%">{{customer}}</p>
       </ion-list>
     </ion-header>
     <ion-content class="app-menu">
